[gd_scene load_steps=14 format=3 uid="uid://by1h8vrubek5c"]

[ext_resource type="Script" uid="uid://elfn8newqjwx" path="res://scripts/credit_scene.gd" id="1_cyc8d"]
[ext_resource type="Texture2D" uid="uid://bkh16yjafjvje" path="res://assets/textures/radio2.png" id="2_12owj"]
[ext_resource type="FontFile" uid="uid://p61maj0aujl6" path="res://assets/Fonts/Versa-Versa.otf" id="3_12owj"]
[ext_resource type="AudioStream" uid="uid://gtvtw6kqsmsk" path="res://assets/sounds/Ink Clot_Radio Version_01.wav" id="4_f4eow"]

[sub_resource type="Animation" id="Animation_jk1qb"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_tbmy8"]
resource_name = "fade"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Fade2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5dd4i"]
_data = {
&"RESET": SubResource("Animation_jk1qb"),
&"fadeIn": SubResource("Animation_tbmy8")
}

[sub_resource type="Animation" id="Animation_f4eow"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(574, 200)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [200.0]
}

[sub_resource type="Animation" id="Animation_12owj"]
resource_name = "background movement"
length = 5.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.4, 5),
"transitions": PackedFloat32Array(0.406126, 0.535887, 0.435275),
"update": 0,
"values": [Vector2(574, 200), Vector2(574, 210), Vector2(574, 200)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8q0x2"]
_data = {
&"RESET": SubResource("Animation_f4eow"),
&"background movement": SubResource("Animation_12owj")
}

[sub_resource type="Animation" id="Animation_nqgi5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(3, 0)]
}

[sub_resource type="Animation" id="Animation_8q0x2"]
resource_name = "scroll"
length = 30.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 30),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(3, 600), Vector2(3, -550)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a5x2q"]
_data = {
&"RESET": SubResource("Animation_nqgi5"),
&"scroll": SubResource("Animation_8q0x2")
}

[node name="CreditScene" type="Node2D"]
script = ExtResource("1_cyc8d")

[node name="Fade" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_5dd4i")
}

[node name="BackgroundPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8q0x2")
}

[node name="CreditScroll" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_a5x2q")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(574, 200)
scale = Vector2(0.631481, 0.631481)
texture = ExtResource("2_12owj")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(578, 323)

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 825.0
offset_top = 552.0
offset_right = 1187.0
offset_bottom = 634.0
theme_override_fonts/normal_font = ExtResource("3_12owj")
theme_override_font_sizes/normal_font_size = 50
text = "Thank you!"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 3.0
offset_right = 1148.0
offset_bottom = 648.0
color = Color(1, 1, 1, 0)

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect"]
layout_mode = 0
offset_left = 53.0
offset_top = 105.0
offset_right = 1065.0
offset_bottom = 546.0
theme_override_constants/line_separation = 10
theme_override_fonts/normal_font = ExtResource("3_12owj")
theme_override_font_sizes/normal_font_size = 25
text = "Tyler Lewis : Sound Designer
Camrynn: Composer
[Nate Sassoon: Composer]

dinosaur065: Programmer, Voice actor
Alex the Slave: Programmer, Technical Artist
Phoenix: Programmer

[Monorchid: Animator]
[cordus: concept artist]
Sedeth: 3D modeler"

[node name="MusicSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, 0.478536)
stream = ExtResource("4_f4eow")
volume_db = -80.0

[node name="Fade2" type="ColorRect" parent="."]
offset_right = 1171.0
offset_bottom = 670.0
color = Color(0, 0, 0, 1)

[connection signal="animation_finished" from="BackgroundPlayer" to="." method="_on_background_player_animation_finished"]
[connection signal="animation_finished" from="CreditScroll" to="." method="_on_credit_scroll_animation_finished"]
